Bug 331054 - Screen lock is not seen while kwin window highlight is active
Summary: Screen lock is not seen while kwin window highlight is active
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: effects-various (other bugs)
Version First Reported In: 4.11.6
Platform: openSUSE Linux
: NOR major
Target Milestone: ---
Assignee: KWin default assignee
URL: https://git.reviewboard.kde.org/r/115...
Keywords:
: 331517 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-02-12 14:28 UTC by Mykola Krachkovsky
Modified: 2015-01-23 14:03 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11.7
Sentry Crash Report:
thomas.luebking: ReviewRequest+


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mykola Krachkovsky 2014-02-12 14:28:40 UTC
If screen is locked while kwin window highlighting effect is active, it becomes almost unusable — lockscreen (plasma-overlay) isn't visible (can enter the password to unlock), still user environment is on screen.

Reproducible: Always

Steps to Reproduce:
1. Activate highlight kwin effect, moving mouse over taskbar (I'm using icon-tasks if this is important) opened window button. That window would be highlighted.
2. Lock the screen. I have autolocking feature on, so this happens to me often. But Ctrl+Alt+L work well too.
Actual Results:  
Lock screen isn't visible, still highlighted window is on screen. Password could be entered (esc, type password, enter — screen becomes unocked), but you can't see what is going on.

Expected Results:  
Plasma-overlay should be seen after locking the screen.

Killing kwin from tty helps to show lock screen. I think this is major bug due to lock screen doesn't perform one of its security features — hide user content from the screen.
Comment 1 Thomas Lübking 2014-02-12 17:21:33 UTC
Not necessarily "major" (i invoked sleep and qdbus to trigger that) but certainly a bug.
Comment 2 Thomas Lübking 2014-02-27 19:25:03 UTC
Git commit ada4b34275d7b31ce185f9038aa78389a1aa287f by Thomas Lübking.
Committed on 12/02/2014 at 17:16.
Pushed by luebking into branch 'KDE/4.11'.

set highlightwindows inactive while screen locked
FIXED-IN: 4.11.7

M  +1    -1    kwin/effects/highlightwindow/highlightwindow.cpp

http://commits.kde.org/kde-workspace/ada4b34275d7b31ce185f9038aa78389a1aa287f
Comment 3 Martin Flöser 2015-01-23 14:03:43 UTC
*** Bug 331517 has been marked as a duplicate of this bug. ***