set highlightwindows inactive while screen locked

BUG: 331054
FIXED-IN: 4.11.7